--- a/ParkingReservationApp/ParkingReservationApp/Properties/Resources.resx
+++ b/ParkingReservationApp/ParkingReservationApp/Properties/Resources.resx
@@ -118,43 +118,46 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="waiting list button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\waiting list button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Exitbtn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Exitbtn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Reservationdesign" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Reservationdesign.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Park_unpark_button-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Park_unpark_button-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Reservation button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Reservation button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Park unpbtn" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Park unpbtn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Form1design" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Form1design.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Btn_layout-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Btn_layout-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Form1design" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Form1design.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="history button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\history button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="467456755_888702183331963_1040266868653311647_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\467456755_888702183331963_1040266868653311647_n.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Park unpark button" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Park unpark button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Reservationdesign" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reservationdesign.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Logindesign" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Logindesign.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="REservationDesign " type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\REservationDesign .jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="history button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\history button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Park unpark button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Park unpark button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Reservation button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Reservation button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Exitbtn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Exitbtn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Park_unpark_button-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Park_unpark_button-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Park unpbtn" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Park unpbtn.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="waiting list button" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\waiting list button.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AdminDesignfnl" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AdminDesignfnl.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
